# goldfish-old

./: .gitignore  .project_env  CMakeLists.txt  README.md
docs/: doxygen.cfg  notes.md
libraries/: CMakeLists.txt
src/: CMakeLists.txt  errors.h  goldfish.h  main.c  memory.c  memory.h  parser.c  parser.h  parser.output  parser.y  scanner.c  scanner.h  scanner.l  symtable.c  symtable.h  system.h
src/asm/: CMakeLists.txt  asm.c  asmErrors.c  listing.c  parser.y  scanner.h  scanner.l  symbolTable.c  symbolTable.h  symtab.c  symtab.h
src/asm/old/: symbolTable.c  symbolTable.h
src/common/: CMakeLists.txt  cmdline.c  cmdline.h  errors.c  errors.h  fileIo.c  fileIo.h  instrStore.c  instrStore.h  listing.c  listing.h  memory.h  misc.c  misc.h  notes.md  opcodes.c  opcodes.h  print.c  print.h  registers.c  registers.h  strStore.c  strStore.h  strutils.c  strutils.h  traps.c  traps.h  valStack.c  valStack.h  values.c  values.h  varStore.c  varStore.h  vm.c  vm.h
src/common/old/: callStack.c  callStack.h
src/compiler/: CMakeLists.txt  cmdline.h  errors.c  goldfish.h  parser.y  scanner.l  symtable.h  system.h
src/disasm/: CMakeLists.txt  disasm.c
src/gas/: CMakeLists.txt  asErrors.c  asm.c  errors.c  errors.h  gas.c  gas.h  parser.y  scanner.h  scanner.l  symtab.c  symtab.h
src/gvm/: CMakeLists.txt  doArith.c  doArith.h  doComp.c  doComp.h  doJmps.c  doJmps.h  gvm.c  gvm.h  runLoop.c  runLoop.h  traps.c  traps.h  vmErrors.c
src/include/: common.h  memory.h  store.h  system.h  vMachine.h  vm.dumb.h
src/runtime/: CMakeLists.txt  CMakeLists.txtx  notes.md  traps.inc
src/vm/: CMakeLists.txt  doArith.c  doComp.c  doJmps.c  doJmps.h  runLoop.c  virt.c  vmErrors.h
test/: CMakeLists.txt
test/gf/: junk.txt
testing/: CMakeLists.txt
testing/asm/: CMakeLists.txt  CMakeLists.txt.old  fake-test.c  fake-test1.c  test1.i  test1.s  test2.i  test2.s  test3.i  test3.s  test4.i  test4.s  test5.s  test6.s  test7.i  test7.s
tests/: namespace.g
utils/: asm.py  setup  setup.sh
